# Supermercado

./: Nombres.xlsx  README.md  factura.txt  factura_ultimo_cliente.txt2.txt  factura_ultimo_cliente1.txt  main.cpp
supermercado_proyecto/: CMakeLists.txt  factura_ultimo_cliente.txt  factura_ultimo_cliente.txt1.txt  factura_ultimo_cliente2.txt  factura_ultimo_cliente3.txt  main.cpp
supermercado_proyecto/QXlsx/: CMakeLists.txt
